adjusted activities section into 2 columns and updated links

--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -84,8 +84,7 @@ footer
 
 .activity
   float: left
-  min-height: 300px
-  width: 33.3333333333%
+  width: 50%
 
 .party-male, .party-female
   float: left
