--- a/styles/main.css
+++ b/styles/main.css
@@ -87,10 +87,10 @@ nav {
 
 nav ul {
   display: inline-block;
-  padding-left: 40px; }
+  padding-left: 25px; }
 nav li {
   float: left;
-  margin-right: 40px; }
+  margin-right: 25px; }
 
 .group {
   *zoom: 1; }
@@ -119,6 +119,10 @@ svg:not(:root) {
 .lodge {
   margin: 0 auto;
   width: 90%; }
+
+.wedpics {
+  margin: 0 auto;
+  width: 40%; }
 
 figure {
   margin: 0; }
@@ -253,10 +257,10 @@ h4 {
 h5 {
   font-size: 3.9em; }
 
-h6 {
+h6, .registry {
   font-size: 2.7em; }
 
-p, dl {
+p, dl, span {
   font-size: 1.95em; }
 
 li {
