--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -121,10 +121,10 @@ nav
 nav
   ul
     display: inline-block
-    padding-left: 40px
+    padding-left: 25px
   li
     float: left
-    margin-right: 40px
+    margin-right: 25px
 
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
 
@@ -161,6 +161,10 @@ svg:not(:root)
 .lodge
   margin: 0 auto
   width: 90%
+
+.wedpics
+  margin: 0 auto
+  width: 40%
 
 
 // ~~~~~~~~~~FIGURES~~~~~~~~~~
@@ -428,10 +432,10 @@ h4
 h5
   font-size: $base-size * 1.3
 
-h6
+h6, .registry
   font-size: $base-size * .9
 
-p, dl
+p, dl, span
   font-size: $base-size * .65
 
 li
