added app download for wedpics

--- a/styles/main.css
+++ b/styles/main.css
@@ -124,6 +124,10 @@ svg:not(:root) {
   margin: 0 auto;
   width: 40%; }
 
+.wedpicsapp {
+  width: 46%;
+  margin: 0 2%; }
+
 figure {
   margin: 0; }
 
