--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -166,6 +166,11 @@ svg:not(:root)
   margin: 0 auto
   width: 40%
 
+.wedpicsapp
+  width: 46%
+  margin: 0 2%
+
+
 
 // ~~~~~~~~~~FIGURES~~~~~~~~~~
 
