added honeymoon section and contact information

--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -82,6 +82,10 @@ footer
   height: 20%
   min-height: 150px
 
+span
+  display: inline-block
+  margin-top: 40px
+
 .activity
   float: left
   width: 50%
