--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,10 @@ footer {
   height: 20%;
   min-height: 150px; }
 
+span {
+  display: inline-block;
+  margin-top: 40px; }
+
 .activity {
   float: left;
   width: 50%; }
