added last names and adjusted styling

--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -157,6 +157,12 @@ svg:not(:root)
 .us
   width: 100%
   margin-bottom: 10%
+  transition: opacity .4s ease-in
+.us:hover
+  
+  opacity: 0
+  //filter: alpha(opacity=0)
+  // -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"
 
 .venue
   width: 60%
