--- a/styles/main.css
+++ b/styles/main.css
@@ -114,7 +114,11 @@ svg:not(:root) {
 
 .us {
   width: 100%;
-  margin-bottom: 10%; }
+  margin-bottom: 10%;
+  transition: opacity 0.4s ease-in; }
+
+.us:hover {
+  opacity: 0; }
 
 .venue {
   width: 60%;
