--- a/styles/main.css
+++ b/styles/main.css
@@ -87,7 +87,8 @@ nav {
   border-radius: 0 0 10px 10px;
   box-shadow: 0 10px 40px rgba(4, 8, 60, 0.15);
   padding: 10px 0;
-  position: fixed; }
+  position: fixed;
+  z-index: 1000; }
 
 nav ul {
   display: inline-block;
@@ -112,10 +113,22 @@ img {
 svg:not(:root) {
   overflow: hidden; }
 
+.usback {
+  background: url("../img/russellreneehover.jpg");
+  background-size: 100%;
+  border-radius: 10px;
+  margin-bottom: 80px;
+  width: 100%; }
+
 .us {
-  width: 100%;
-  margin-bottom: 10%;
-  transition: opacity 0.4s ease-in; }
+  border-radius: 10px;
+  transition: opacity 0.25s ease-in;
+  width: 100%; }
+
+.us:hover {
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; }
 
 .venue {
   width: 60%;
