--- a/styles/main.css
+++ b/styles/main.css
@@ -322,3 +322,29 @@ q {
 
 .press-light, nav {
   text-shadow: 1px 1px 1px white; }
+
+@media all and (max-width: 700px) {
+  h1 {
+    font-size: 6.45em; }
+
+  h2 {
+    font-size: 2.15em; }
+
+  h3 {
+    font-size: 2.15em;
+    font-weight: 800; }
+
+  h4 {
+    font-size: 4.8375em; }
+
+  h5 {
+    font-size: 2.795em; }
+
+  h6, .registry {
+    font-size: 1.935em; }
+
+  p, dl, span {
+    font-size: 1.3975em; }
+
+  li {
+    font-size: 1.505em; } }
