--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -443,6 +443,36 @@ q
   text-shadow: $press-lt
 
 
+// ~~~~~~~~~~MEDIA QUERIES~~~~~~~~~~
+
+@media all and (max-width: 700px)
+  $base-size: 2.15em
+
+  h1
+    font-size: $base-size * 3
+
+  h2
+    font-size: $base-size * 1
+
+  h3
+    font-size: $base-size * 1
+    font-weight: 800
+
+  h4
+    font-size: $base-size * 2.25
+
+  h5
+    font-size: $base-size * 1.3
+
+  h6, .registry
+    font-size: $base-size * .9
+
+  p, dl, span
+    font-size: $base-size * .65
+
+  li
+    font-size: $base-size * .7
+
 
 // www.subtlepatterns.com | edited Light Gray Floral Motif | http://www.graphicswall.com/
 //! normalize.css v2.1.1 | MIT License | git.io/normalize
