--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -160,7 +160,7 @@ svg:not(:root)
   background: url('../img/russellreneehover.jpg')
   background-size: 100%
   border-radius: 10px
-  margin-bottom: 80px
+  margin-bottom: 50px
   width: 100%
 
 .us
@@ -445,7 +445,43 @@ q
 
 // ~~~~~~~~~~MEDIA QUERIES~~~~~~~~~~
 
-@media all and (max-width: 700px)
+@media all and (max-width: 1120px) and (min-width: 720px)
+  $base-size: 3em
+
+  h1
+    font-size: $base-size * 3
+
+  h2
+    font-size: $base-size * 1
+
+  h3
+    font-size: $base-size * 1
+    font-weight: 800
+
+  h4
+    font-size: $base-size * 2.25
+
+  h5
+    font-size: $base-size * 1.3
+
+  h6, .registry
+    font-size: $base-size * .9
+
+  p, dl, span
+    font-size: $base-size * .65
+
+  li
+    font-size: $base-size * .7
+
+  nav
+    ul
+      padding-left: 15px
+    li
+      margin-right: 15px
+
+
+
+@media all and (max-width: 720px) and (min-width: 420px)
   $base-size: 2.15em
 
   h1
@@ -453,6 +489,43 @@ q
 
   h2
     font-size: $base-size * 1
+
+  h3
+    font-size: $base-size * 1
+    font-weight: 800
+
+  h4
+    font-size: $base-size * 2.25
+
+  h5
+    font-size: $base-size * 1.3
+
+  h6, .registry
+    font-size: $base-size * .9
+
+  p, dl, span
+    font-size: $base-size * .65
+
+  li
+    font-size: $base-size * .7
+
+  nav
+    ul
+      padding-left: 10px
+    li
+      margin-right: 10px
+
+
+@media all and (max-width: 420px)
+  $base-size: 2.5em
+
+  h1
+    font-size: $base-size * 2
+    margin: 0 0 -10px
+    padding-right: 20px
+
+  h2
+    font-size: $base-size * .8
 
   h3
     font-size: $base-size * 1
