--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -101,13 +101,15 @@ span
   width: 100%
 
 .details
-  width: 40%
+  float: left
   text-align: left
+  width: 40%
 
 .pull
   float: left
 
 .overview
+  float: left
   width: 33.333333%
 
 
@@ -174,8 +176,9 @@ svg:not(:root)
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"
 
 .venue
-  width: 60%
+  float: left
   margin-bottom: 3%
+  width: 60%
 
 .lodge
   margin: 0 auto
@@ -188,6 +191,7 @@ svg:not(:root)
 .wedpicsapp
   width: 46%
   margin: 0 2%
+  float: left
 
 
 
@@ -528,14 +532,15 @@ q
     font-size: $base-size * .8
 
   h3
-    font-size: $base-size * 1
+    font-size: $base-size * .97
     font-weight: 800
 
   h4
-    font-size: $base-size * 2.25
+    font-size: $base-size * 2.17
 
   h5
     font-size: $base-size * 1.3
+    margin-top: 10px
 
   h6, .registry
     font-size: $base-size * .9
@@ -545,6 +550,54 @@ q
 
   li
     font-size: $base-size * .7
+
+  .party-male, .party-female
+    li
+      font-size: $base-size * .69
+      padding: 8px 0
+
+  .overview
+    float: none
+    margin: 0 auto
+    width: 80%
+    h3
+      margin: .75em 0 .25em 0
+
+  .details 
+    float: none
+    margin: 0 auto
+    width: 80%
+    h5, li
+      text-align: center
+
+  .venue
+    float: none
+    margin: 5% auto
+    width: 80%
+
+  .activity
+    float: none
+    margin: 0 auto
+    width: 80%
+
+  .wedpics
+    width: 80%
+
+  #behind
+    li
+      font-size: $base-size * .65
+      padding: 4px 0
+
+  footer
+    background-size: 70% auto
+    min-height: 120px    
+
+
+
+
+
+
+
 
 
 // www.subtlepatterns.com | edited Light Gray Floral Motif | http://www.graphicswall.com/
