--- a/styles/main.css
+++ b/styles/main.css
@@ -99,6 +99,9 @@ nav li {
   float: left;
   margin-right: 25px; }
 
+.gotop {
+  display: none; }
+
 .group {
   *zoom: 1; }
   .group:before, .group:after {
@@ -502,4 +505,43 @@ q {
     min-height: 120px; }
 
   .hide-med, .hide-sm {
-    display: none; } }
+    display: none; }
+
+  .container {
+    padding-top: 30px; }
+
+  .main {
+    border-radius: 10px 10px 0 0; }
+
+  nav {
+    width: 100%;
+    background-color: white;
+    background: url("../img/feathers.png");
+    box-shadow: 0 10px 40px rgba(4, 8, 60, 0.15);
+    padding: 10px 0;
+    position: relative;
+    z-index: 1; }
+
+  nav ul {
+    display: inline-block;
+    padding-left: 25px; }
+  nav li {
+    float: left;
+    margin-right: 25px; }
+
+  .gotop {
+    background-color: white;
+    background: url("../img/feathers.png");
+    border-radius: 5px;
+    bottom: 5px;
+    box-shadow: 0 2px 10px rgba(4, 8, 60, 0.25);
+    display: inline-block;
+    font-size: 1.625em;
+    font-weight: 800;
+    height: 30px;
+    line-height: 30px;
+    padding-top: 10px;
+    position: fixed;
+    right: 5px;
+    width: 40px;
+    z-index: 1000; } }
