--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -133,6 +133,9 @@ nav
     float: left
     margin-right: 25px
 
+.gotop
+  display: none
+
 // ~~~~~~~~~~CLEARFIX~~~~~~~~~~
 
 .group
@@ -648,8 +651,49 @@ q
   .hide-med, .hide-sm
     display: none
 
+  .container
+    padding-top: 30px
 
+  .main
+    border-radius: 10px 10px 0 0
 
+  nav
+    width: 100%
+    background-color: $white
+    background: $bkgrnd-lt
+    box-shadow: 0 10px 40px fade-out($blue, .85)
+    padding: 10px 0
+    position: relative
+    z-index: 1
+
+  nav
+    ul
+      display: inline-block
+      padding-left: 25px
+    li
+      float: left
+      margin-right: 25px
+
+  .gotop
+    background-color: $white
+    background: $bkgrnd-lt
+    border-radius: 5px
+    bottom: 5px
+    box-shadow: 0 2px 10px fade-out($blue, .75)
+    display: inline-block
+    font-size: $base-size * .65
+    font-weight: 800
+    height: 30px
+    line-height: 30px
+    padding-top: 10px
+    position: fixed
+    right: 5px
+    width: 40px
+    z-index: 1000
+
+  
+  
+  
 
 
 
