--- a/styles/main.css
+++ b/styles/main.css
@@ -221,14 +221,13 @@ a {
   transition: all 0.25s ease-in-out; }
   a:focus {
     outline: thin dotted;
-    color: #1c2bf0;
     color: rgba(4, 8, 60, 0.4); }
   a:active, a:hover {
     outline: 0; }
   a:active {
-    color: rgba(14, 27, 203, 0.5); }
+    color: rgba(90, 0, 20, 0.5); }
   a:hover {
-    color: rgba(10, 21, 156, 0.6); }
+    color: #5a0014; }
 
 ul, ol, dl {
   list-style: none;
@@ -329,6 +328,10 @@ q {
 
 .press-light, nav {
   text-shadow: 1px 1px 1px white; }
+
+.underline {
+  border-bottom: 1px dotted #5a0014;
+  padding-bottom: 4px; }
 
 @media all and (max-width: 1320px) and (min-width: 1120px) {
   .hide-med {
