--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -339,10 +339,10 @@ ul, ol, dl
   padding: 0
   margin: 0
 
-dt, .justify
+dl, dt, .justify
   text-align: justify
 
-dl, .left
+.left
   text-align: left
 
 .option
@@ -450,6 +450,9 @@ q
 .underline
   border-bottom: 1px dotted $red
   padding-bottom: 4px
+
+.text-center
+  text-align: center
 
 
 // ~~~~~~~~~~MEDIA QUERIES~~~~~~~~~~
