--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -112,6 +112,11 @@ span
   float: left
   width: 33.333333%
 
+.recommend
+  margin: 4% 0 8%
+
+.elevation
+  margin-left: 10%
 
 // ~~~~~~~~~~NAVIGATION~~~~~~~~~~
 
