--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -9,6 +9,13 @@ $press-hvy: 1px 1px 2px $white, -1px -1px 1px fade-out(darken($blue, 5%), .5)
 $press-lt: 1px 1px 1px $white
 $base-size: 3em
 
+$photo-width: 800px
+$photo-height: $photo-width*0.66541353383459
+$arrow-size: 156pt
+$arrow-location: $photo-height
+
+
+
 $max-width: 1040
 $columns: 4
 
@@ -209,8 +216,8 @@ svg:not(:root)
 
 .slides 
   padding: 0
-  width: 609px
-  height: 420px
+  width: $photo-width
+  height: $photo-height
   display: block
   margin: 0 auto
   position: relative
@@ -232,8 +239,8 @@ svg:not(:root)
 .slide
   top: 0
   opacity: 0
-  width: 609px
-  height: 420px
+  width: 100%
+  height: 100%
   display: block
   position: absolute
   transform: scale(0)
@@ -244,7 +251,7 @@ svg:not(:root)
   height: 100%
 
 .nav label
-  width: 200px
+  width: 12%
   height: 100%
   display: none
   position: absolute
@@ -253,9 +260,9 @@ svg:not(:root)
   cursor: pointer
   transition: opacity .2s
   color: #FFF
-  font-size: 156pt
+  font-size: $arrow-size
   text-align: center
-  line-height: 380px
+  line-height: $arrow-location
   font-family: "Varela Round", sans-serif
   background-color: rgba(255, 255, 255, .3)
   text-shadow: 0px 0px 15px rgb(119, 119, 119)
@@ -276,28 +283,6 @@ input:checked + .slide-container  .slide
 
 input:checked + .slide-container .nav label
   display: block
-
-.nav-dots
-  width: 100%
-  bottom: 9px
-  height: 11px
-  display: block
-  position: absolute
-  text-align: center
-
-.nav-dots .nav-dot
-  top: -5px
-  width: 11px
-  height: 11px
-  margin: 0 4px
-  position: relative
-  border-radius: 100%
-  display: inline-block
-  background-color: rgba(0, 0, 0, 0.6)
-
-.nav-dots .nav-dot:hover
-  cursor: pointer
-  background-color: rgba(0, 0, 0, 0.8)
 
 input#img-1:checked ~ .nav-dots label#img-dot-1,
 input#img-2:checked ~ .nav-dots label#img-dot-2,
@@ -580,6 +565,20 @@ q
 
 
 @media all and (max-width: 1120px) and (min-width: 920px)
+
+  $photo-width: 720px
+  $photo-height: $photo-width*0.66541353383459
+  $arrow-location: $photo-height
+
+  .slides 
+    width: $photo-width
+    height: $photo-height
+
+  .nav label
+    width: 12%
+    font-size: $arrow-size
+    line-height: $arrow-location
+
   $base-size: 3em
 
   h1
@@ -618,6 +617,21 @@ q
 
 
 @media all and (max-width: 920px) and (min-width: 720px)
+
+  $photo-width: 600px
+  $photo-height: $photo-width*0.66541353383459
+  $arrow-location: $photo-height
+  $arrow-size: 126pt
+
+  .slides 
+    width: $photo-width
+    height: $photo-height
+
+  .nav label
+    width: 12%
+    font-size: $arrow-size
+    line-height: $arrow-location
+
   $base-size: 3em
 
   h1
@@ -656,6 +670,21 @@ q
 
 
 @media all and (max-width: 720px) and (min-width: 520px)
+
+  $photo-width: 430px
+  $photo-height: $photo-width*0.66541353383459
+  $arrow-location: $photo-height
+  $arrow-size: 106pt
+
+  .slides 
+    width: $photo-width
+    height: $photo-height
+
+  .nav label
+    width: 12%
+    font-size: $arrow-size
+    line-height: $arrow-location
+
   $base-size: 2.2em
 
   h1
@@ -699,6 +728,21 @@ q
 
 
 @media all and (max-width: 520px)
+
+  $photo-width: 320px
+  $photo-height: $photo-width*0.66541353383459
+  $arrow-location: $photo-height
+  $arrow-size: 76pt
+
+  .slides 
+    width: $photo-width
+    height: $photo-height
+
+  .nav label
+    width: 12%
+    font-size: $arrow-size
+    line-height: $arrow-location
+
   $base-size: 2.5em
 
   h1
